[gd_scene load_steps=45 format=3 uid="uid://b10ayfu54bqbj"]

[ext_resource type="PackedScene" uid="uid://bw0wf8ucp6kh3" path="res://Managers/wall_manager.tscn" id="1_27033"]
[ext_resource type="PackedScene" uid="uid://irau73xk8dbf" path="res://Entities/wall.tscn" id="2_adbfm"]
[ext_resource type="PackedScene" uid="uid://cinj7tasax4k1" path="res://Entities/player.tscn" id="2_b6u52"]
[ext_resource type="PackedScene" uid="uid://bt2kq5wy0fc18" path="res://Managers/score_manager.tscn" id="3_iwcb8"]
[ext_resource type="PackedScene" uid="uid://dhk4b6w6lnf3" path="res://Entities/wall_despawner.tscn" id="4_dx44d"]
[ext_resource type="PackedScene" uid="uid://bdhlq7eq438xd" path="res://Entities/wall_high.tscn" id="4_q0q8c"]
[ext_resource type="PackedScene" uid="uid://bseqy40ouvlcd" path="res://Entities/wall_low.tscn" id="6_c3opf"]
[ext_resource type="PackedScene" uid="uid://bl4a6sgs0ys3k" path="res://Entities/ground_area.tscn" id="6_d58j7"]
[ext_resource type="Script" path="res://Entities/ground_area.gd" id="7_bgl6g"]
[ext_resource type="PackedScene" uid="uid://c2dyfy0cp8kb4" path="res://Managers/game_manager.tscn" id="7_xe800"]
[ext_resource type="Script" path="res://Managers/game_manager.gd" id="8_0onya"]
[ext_resource type="PackedScene" uid="uid://b88341ahio87m" path="res://Entities/roof_2d.tscn" id="8_1nlsd"]
[ext_resource type="PackedScene" uid="uid://vq503kx0dtjt" path="res://Entities/score_area.tscn" id="10_qq6od"]
[ext_resource type="PackedScene" uid="uid://bmkdbvehxc4vg" path="res://Scenes/highscore_screen.tscn" id="15_4hkdc"]
[ext_resource type="Texture2D" uid="uid://b6t0mt1reriw2" path="res://ParallaxBackground/Sky.png" id="15_ajui6"]
[ext_resource type="Script" path="res://Scenes/ParallaxBackground.gd" id="15_rwjnq"]
[ext_resource type="Texture2D" uid="uid://djg5s0yj4kube" path="res://ParallaxBackground/DownLayer.png" id="16_hyol1"]
[ext_resource type="Texture2D" uid="uid://dwnu1m3kv468l" path="res://ParallaxBackground/TopLayer.png" id="17_g3fb4"]
[ext_resource type="Texture2D" uid="uid://b121pq48hyy2n" path="res://ParallaxBackground/MiddleLayer.png" id="18_dhi51"]
[ext_resource type="Texture2D" uid="uid://dpsn275llk51b" path="res://ParallaxBackground/Light.png" id="19_66el7"]
[ext_resource type="Script" path="res://Scenes/ParallaxBackground2.gd" id="20_1fda7"]
[ext_resource type="FontFile" uid="uid://be118gy30lsrs" path="res://GothicPixels.ttf" id="22_7w78c"]
[ext_resource type="LabelSettings" uid="uid://bbmf07po8xv0v" path="res://title_text_settings.tres" id="22_qvn5s"]
[ext_resource type="LabelSettings" uid="uid://cb1whe4pamwto" path="res://text_settings.tres" id="23_18bik"]
[ext_resource type="AudioStream" uid="uid://tcwv0sl34pcm" path="res://click noise.wav" id="25_sb0ji"]
[ext_resource type="PackedScene" uid="uid://cbg30jtm2ty3c" path="res://Scenes/Start Screen.tscn" id="26_g5b7d"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_4qt6x"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_uyjx1"]

[sub_resource type="LabelSettings" id="LabelSettings_rwcw1"]
font = ExtResource("22_7w78c")
font_size = 30
outline_size = 5
outline_color = Color(0.537255, 0.580392, 0.662745, 1)
shadow_size = 0
shadow_color = Color(0, 0, 0, 0.721569)
shadow_offset = Vector2(1.96, 3.435)

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_yj6qa"]

[sub_resource type="LabelSettings" id="LabelSettings_wc3gw"]
font = ExtResource("22_7w78c")
font_size = 30
outline_size = 5
outline_color = Color(0.537255, 0.580392, 0.662745, 1)
shadow_size = 0
shadow_color = Color(0, 0, 0, 0.721569)
shadow_offset = Vector2(1.96, 3.435)

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_uew5s"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_r5a8w"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_6cx7s"]

[sub_resource type="LabelSettings" id="LabelSettings_pli00"]
font = ExtResource("22_7w78c")
font_size = 36
outline_size = 5
outline_color = Color(0.537255, 0.580392, 0.662745, 1)
shadow_size = 0
shadow_color = Color(0, 0, 0, 0.721569)
shadow_offset = Vector2(1.96, 3.435)

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_ww7u7"]

[sub_resource type="LabelSettings" id="LabelSettings_byffc"]
font = ExtResource("22_7w78c")
font_size = 30
outline_size = 5
outline_color = Color(0.537255, 0.580392, 0.662745, 1)
shadow_size = 0
shadow_color = Color(0, 0, 0, 0.721569)
shadow_offset = Vector2(1.96, 3.435)

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_o4shf"]

[sub_resource type="LabelSettings" id="LabelSettings_w6ur4"]
font = ExtResource("22_7w78c")
font_size = 30
outline_size = 5
outline_color = Color(0.537255, 0.580392, 0.662745, 1)
shadow_size = 0
shadow_color = Color(0, 0, 0, 0.721569)
shadow_offset = Vector2(1.96, 3.435)

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_qsbqa"]

[sub_resource type="LabelSettings" id="LabelSettings_r3ip0"]
font = ExtResource("22_7w78c")
font_size = 175
outline_size = 11
outline_color = Color(0.537255, 0.580392, 0.662745, 1)
shadow_size = 16
shadow_color = Color(0, 0, 0, 0.721569)
shadow_offset = Vector2(1.96, 3.435)

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_hy0n7"]

[sub_resource type="LabelSettings" id="LabelSettings_l4npm"]
font = ExtResource("22_7w78c")
font_size = 80
outline_size = 11
outline_color = Color(0.537255, 0.580392, 0.662745, 1)
shadow_size = 16
shadow_color = Color(0, 0, 0, 0.721569)
shadow_offset = Vector2(1.96, 3.435)

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_bld58"]

[node name="Main" type="Node"]

[node name="WallManager" parent="." groups=["wall_manager"] instance=ExtResource("1_27033")]
score_area = ExtResource("10_qq6od")
wall_scenes = Array[PackedScene]([ExtResource("2_adbfm"), ExtResource("4_q0q8c"), ExtResource("6_c3opf")])

[node name="GameManager" parent="." instance=ExtResource("7_xe800")]
script = ExtResource("8_0onya")

[node name="ScoreManager" parent="." instance=ExtResource("3_iwcb8")]

[node name="Entities" type="Node" parent="." groups=["entities"]]

[node name="Player" parent="Entities" instance=ExtResource("2_b6u52")]
process_mode = 1
position = Vector2(319, 184)

[node name="WallDespawner" parent="." instance=ExtResource("4_dx44d")]

[node name="ScoreAreaSpawnPoint" type="Marker2D" parent="."]
position = Vector2(687, 140)

[node name="WallSpawnPoint" type="Marker2D" parent="."]
position = Vector2(640, 0)

[node name="GroundArea" parent="." instance=ExtResource("6_d58j7")]
unique_name_in_owner = true
position = Vector2(-1, 28)
collision_layer = 2
script = ExtResource("7_bgl6g")

[node name="Roof2D" parent="." instance=ExtResource("8_1nlsd")]
unique_name_in_owner = true
position = Vector2(-6, -42)
collision_layer = 2

[node name="ScoreArea" parent="." instance=ExtResource("10_qq6od")]
unique_name_in_owner = true
position = Vector2(688, 140)

[node name="Background" type="CanvasLayer" parent="."]

[node name="ParallaxBackground" type="ParallaxBackground" parent="Background"]
script = ExtResource("15_rwjnq")

[node name="ParallaxLayer" type="ParallaxLayer" parent="Background/ParallaxBackground"]
motion_scale = Vector2(0.5, 1)
motion_mirroring = Vector2(640, 0)

[node name="Sprite2D" type="Sprite2D" parent="Background/ParallaxBackground/ParallaxLayer"]
position = Vector2(320, 180)
scale = Vector2(1.66667, 2.22222)
texture = ExtResource("15_ajui6")

[node name="ParallaxLayer2" type="ParallaxLayer" parent="Background/ParallaxBackground"]
motion_mirroring = Vector2(640, 0)

[node name="Sprite2D" type="Sprite2D" parent="Background/ParallaxBackground/ParallaxLayer2"]
position = Vector2(320, 180)
scale = Vector2(1.66667, 2.22222)
texture = ExtResource("16_hyol1")

[node name="ParallaxLayer4" type="ParallaxLayer" parent="Background/ParallaxBackground"]
motion_scale = Vector2(1.25, 1)
motion_mirroring = Vector2(640, 0)

[node name="Sprite2D" type="Sprite2D" parent="Background/ParallaxBackground/ParallaxLayer4"]
position = Vector2(320, 180)
scale = Vector2(1.667, 2.222)
texture = ExtResource("18_dhi51")

[node name="ParallaxLayer5" type="ParallaxLayer" parent="Background/ParallaxBackground"]
motion_scale = Vector2(1.5, 1)
motion_mirroring = Vector2(640, 0)

[node name="Sprite2D" type="Sprite2D" parent="Background/ParallaxBackground/ParallaxLayer5"]
position = Vector2(320, 180)
scale = Vector2(1.667, 2.222)
texture = ExtResource("19_66el7")

[node name="Foreground" type="ParallaxBackground" parent="."]
layer = 0
script = ExtResource("20_1fda7")

[node name="ParallaxLayer3" type="ParallaxLayer" parent="Foreground"]
motion_mirroring = Vector2(640, 0)

[node name="Sprite2D" type="Sprite2D" parent="Foreground/ParallaxLayer3"]
z_index = 19
z_as_relative = false
position = Vector2(320, 180)
scale = Vector2(1.667, 2.222)
texture = ExtResource("17_g3fb4")

[node name="GameOver" type="CanvasLayer" parent="."]
unique_name_in_owner = true
process_mode = 3
visible = false

[node name="ColorRect" type="ColorRect" parent="GameOver"]
process_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.427451, 0.290196, 0.407843, 1)

[node name="VBoxContainer" type="VBoxContainer" parent="GameOver/ColorRect"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 15
alignment = 1

[node name="YouDied" type="Panel" parent="GameOver/ColorRect/VBoxContainer"]
custom_minimum_size = Vector2(200, 76.725)
layout_mode = 2
size_flags_vertical = 0
theme_override_styles/panel = SubResource("StyleBoxEmpty_4qt6x")

[node name="Label" type="Label" parent="GameOver/ColorRect/VBoxContainer/YouDied"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
text = "You Died!"
label_settings = ExtResource("22_qvn5s")
horizontal_alignment = 1

[node name="HBoxContainer" type="HBoxContainer" parent="GameOver/ColorRect/VBoxContainer"]
custom_minimum_size = Vector2(0, 85.63)
layout_direction = 3
layout_mode = 2
alignment = 1

[node name="Exit" type="Panel" parent="GameOver/ColorRect/VBoxContainer/HBoxContainer"]
visible = false
custom_minimum_size = Vector2(250, 0)
layout_mode = 2
size_flags_vertical = 4
theme_override_styles/panel = SubResource("StyleBoxEmpty_uyjx1")

[node name="ExitButton" type="Button" parent="GameOver/ColorRect/VBoxContainer/HBoxContainer/Exit"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -100.5
offset_top = -34.5
offset_right = 89.5
offset_bottom = 34.5
grow_horizontal = 2
grow_vertical = 2

[node name="Label" type="Label" parent="GameOver/ColorRect/VBoxContainer/HBoxContainer/Exit/ExitButton"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
text = "Exit"
label_settings = SubResource("LabelSettings_rwcw1")
horizontal_alignment = 1
vertical_alignment = 1

[node name="PlayAgain" type="Panel" parent="GameOver/ColorRect/VBoxContainer/HBoxContainer"]
custom_minimum_size = Vector2(250.075, 0)
layout_mode = 2
size_flags_vertical = 4
theme_override_styles/panel = SubResource("StyleBoxEmpty_yj6qa")

[node name="PlayButton" type="Button" parent="GameOver/ColorRect/VBoxContainer/HBoxContainer/PlayAgain"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -95.0
offset_top = -35.5
offset_right = 95.0
offset_bottom = 35.5
grow_horizontal = 2
grow_vertical = 2
theme_override_fonts/font = ExtResource("22_7w78c")
theme_override_font_sizes/font_size = 32

[node name="Label" type="Label" parent="GameOver/ColorRect/VBoxContainer/HBoxContainer/PlayAgain/PlayButton"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
text = "Play again"
label_settings = SubResource("LabelSettings_wc3gw")
horizontal_alignment = 1
vertical_alignment = 1

[node name="Panel" type="Panel" parent="GameOver/ColorRect/VBoxContainer"]
custom_minimum_size = Vector2(250, 60)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 8
size_flags_stretch_ratio = 0.0

[node name="LineEdit" type="LineEdit" parent="GameOver/ColorRect/VBoxContainer/Panel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_fonts/font = ExtResource("22_7w78c")
theme_override_font_sizes/font_size = 23
placeholder_text = "Enter Name"
alignment = 1
caret_blink = true
caret_force_displayed = true

[node name="ScoreBoard" type="CanvasLayer" parent="."]
unique_name_in_owner = true
visible = false

[node name="Container" type="HBoxContainer" parent="ScoreBoard"]
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -252.0
offset_right = 252.0
offset_bottom = 52.0
grow_horizontal = 2
size_flags_horizontal = 3
alignment = 1

[node name="Panel2" type="Panel" parent="ScoreBoard/Container"]
custom_minimum_size = Vector2(250, 50)
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxEmpty_uew5s")

[node name="HighscoreLabel" type="Label" parent="ScoreBoard/Container/Panel2"]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -68.5
offset_top = -10.0
offset_right = 68.5
offset_bottom = 10.0
grow_horizontal = 2
grow_vertical = 2
theme_override_fonts/font = ExtResource("22_7w78c")
theme_override_font_sizes/font_size = 20
text = "High Score: 0"
label_settings = ExtResource("23_18bik")
horizontal_alignment = 1
vertical_alignment = 1

[node name="Panel" type="Panel" parent="ScoreBoard/Container"]
custom_minimum_size = Vector2(250, 50)
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxEmpty_r5a8w")

[node name="ScoreLabel" type="Label" parent="ScoreBoard/Container/Panel"]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -42.0
offset_top = -10.0
offset_right = 42.0
offset_bottom = 10.0
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 20
text = "Score: 0"
label_settings = ExtResource("23_18bik")
horizontal_alignment = 1
vertical_alignment = 1

[node name="HighscoreScreen" parent="." instance=ExtResource("15_4hkdc")]
unique_name_in_owner = true
process_mode = 3
visible = false

[node name="ColorRect2" type="ColorRect" parent="HighscoreScreen"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.341176, 0.368627, 0.478431, 1)

[node name="VBoxContainer" type="VBoxContainer" parent="HighscoreScreen"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = -13.0
offset_bottom = 13.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 15
alignment = 1

[node name="HighscorePanel2" type="Panel" parent="HighscoreScreen/VBoxContainer"]
custom_minimum_size = Vector2(0, 52.96)
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxEmpty_6cx7s")

[node name="Label" type="Label" parent="HighscoreScreen/VBoxContainer/HighscorePanel2"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 41
text = "High Scores"
label_settings = SubResource("LabelSettings_pli00")
horizontal_alignment = 1
vertical_alignment = 1

[node name="MarginContainer" type="MarginContainer" parent="HighscoreScreen/VBoxContainer"]
clip_contents = true
custom_minimum_size = Vector2(0, 190.125)
layout_mode = 2
theme_override_constants/margin_left = 50
theme_override_constants/margin_top = -6
theme_override_constants/margin_right = 50
theme_override_constants/margin_bottom = 12

[node name="ScrollContainer" type="ScrollContainer" parent="HighscoreScreen/VBoxContainer/MarginContainer"]
process_mode = 3
clip_children = 1
clip_contents = false
custom_minimum_size = Vector2(78, 78)
layout_mode = 2
follow_focus = true
vertical_scroll_mode = 3

[node name="VBoxContainer" type="VBoxContainer" parent="HighscoreScreen/VBoxContainer/MarginContainer/ScrollContainer" groups=["v_box_container"]]
unique_name_in_owner = true
clip_contents = true
custom_minimum_size = Vector2(78.965, 78)
layout_direction = 2
layout_mode = 2
size_flags_horizontal = 3

[node name="HBoxContainer" type="HBoxContainer" parent="HighscoreScreen/VBoxContainer"]
custom_minimum_size = Vector2(0, 86.565)
layout_direction = 3
layout_mode = 2
size_flags_vertical = 4
alignment = 1

[node name="Exit2" type="Panel" parent="HighscoreScreen/VBoxContainer/HBoxContainer"]
visible = false
custom_minimum_size = Vector2(250, 69)
layout_mode = 2
size_flags_vertical = 0
theme_override_styles/panel = SubResource("StyleBoxEmpty_ww7u7")

[node name="HighscoreExitButton" type="Button" parent="HighscoreScreen/VBoxContainer/HBoxContainer/Exit2"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -17.0
offset_right = -77.0
grow_horizontal = 2
grow_vertical = 2

[node name="Label" type="Label" parent="HighscoreScreen/VBoxContainer/HBoxContainer/Exit2/HighscoreExitButton"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
text = "EXIT"
label_settings = SubResource("LabelSettings_byffc")
horizontal_alignment = 1
vertical_alignment = 1

[node name="Panel" type="Panel" parent="HighscoreScreen/VBoxContainer/HBoxContainer"]
custom_minimum_size = Vector2(250, 69)
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 0
theme_override_styles/panel = SubResource("StyleBoxEmpty_o4shf")

[node name="HighscorePlayAgainButton" type="Button" parent="HighscoreScreen/VBoxContainer/HBoxContainer/Panel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Label" type="Label" parent="HighscoreScreen/VBoxContainer/HBoxContainer/Panel/HighscorePlayAgainButton"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
text = "Play Again"
label_settings = SubResource("LabelSettings_w6ur4")
horizontal_alignment = 1
vertical_alignment = 1

[node name="CountDown" type="CanvasLayer" parent="HighscoreScreen"]
unique_name_in_owner = true

[node name="Panel" type="Panel" parent="HighscoreScreen/CountDown"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxEmpty_qsbqa")

[node name="TimerLabel" type="Label" parent="HighscoreScreen/CountDown/Panel"]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -40.0
offset_right = 20.0
offset_bottom = 40.0
grow_horizontal = 2
grow_vertical = 2
label_settings = SubResource("LabelSettings_r3ip0")

[node name="CountDownTimer" type="Timer" parent="HighscoreScreen/CountDown"]
unique_name_in_owner = true
process_mode = 3
wait_time = 0.7

[node name="CountDownSound" type="AudioStreamPlayer" parent="HighscoreScreen/CountDown"]
unique_name_in_owner = true
stream = ExtResource("25_sb0ji")

[node name="StartScreen" parent="HighscoreScreen" instance=ExtResource("26_g5b7d")]
unique_name_in_owner = true

[node name="MarginContainer2" type="MarginContainer" parent="HighscoreScreen/StartScreen"]
offset_right = 640.0
offset_bottom = 360.0

[node name="VBoxContainer" type="VBoxContainer" parent="HighscoreScreen/StartScreen/MarginContainer2"]
layout_mode = 2
alignment = 1

[node name="Panel" type="Panel" parent="HighscoreScreen/StartScreen/MarginContainer2/VBoxContainer"]
custom_minimum_size = Vector2(23.995, 120.71)
layout_mode = 2
size_flags_vertical = 4
theme_override_styles/panel = SubResource("StyleBoxEmpty_hy0n7")

[node name="Label" type="Label" parent="HighscoreScreen/StartScreen/MarginContainer2/VBoxContainer/Panel"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -297.5
offset_top = -40.0
offset_right = 297.5
offset_bottom = 40.0
grow_horizontal = 2
grow_vertical = 2
text = "Flappy Wizard"
label_settings = SubResource("LabelSettings_l4npm")

[node name="Panel2" type="Panel" parent="HighscoreScreen/StartScreen/MarginContainer2/VBoxContainer"]
custom_minimum_size = Vector2(4.015, 118.89)
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxEmpty_bld58")

[node name="Button" type="Button" parent="HighscoreScreen/StartScreen/MarginContainer2/VBoxContainer/Panel2"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -100.0
offset_top = -35.0
offset_right = 100.0
offset_bottom = 35.0
grow_horizontal = 2
grow_vertical = 2
theme_override_fonts/font = ExtResource("22_7w78c")
theme_override_font_sizes/font_size = 61
text = "Start"

[connection signal="timer" from="GameManager" to="Entities/Player" method="_on_game_manager_timer"]
[connection signal="dead" from="Entities/Player" to="GameManager" method="_on_player_dead"]
[connection signal="player_wall_stop" from="Entities/Player" to="WallManager" method="_on_player_player_wall_stop"]
[connection signal="player_wall_stop" from="Entities/Player" to="Background/ParallaxBackground" method="_on_player_player_wall_stop"]
[connection signal="player_wall_stop" from="Entities/Player" to="Foreground" method="_on_player_player_wall_stop"]
[connection signal="score_point" from="Entities/Player" to="ScoreManager" method="_on_player_score_point"]
[connection signal="area_entered" from="GroundArea" to="GroundArea" method="_on_area_entered"]
[connection signal="pressed" from="GameOver/ColorRect/VBoxContainer/HBoxContainer/Exit/ExitButton" to="GameManager" method="_on_exit_button_pressed"]
[connection signal="pressed" from="GameOver/ColorRect/VBoxContainer/HBoxContainer/PlayAgain/PlayButton" to="GameManager" method="_on_play_button_pressed"]
[connection signal="pressed" from="GameOver/ColorRect/VBoxContainer/HBoxContainer/PlayAgain/PlayButton" to="ScoreManager" method="_on_play_button_pressed"]
[connection signal="text_submitted" from="GameOver/ColorRect/VBoxContainer/Panel/LineEdit" to="ScoreManager" method="_on_line_edit_text_submitted"]
[connection signal="pressed" from="HighscoreScreen/VBoxContainer/HBoxContainer/Exit2/HighscoreExitButton" to="GameManager" method="_on_highscore_exit_button_pressed"]
[connection signal="pressed" from="HighscoreScreen/VBoxContainer/HBoxContainer/Panel/HighscorePlayAgainButton" to="GameManager" method="_on_highscore_play_again_button_pressed"]
[connection signal="timeout" from="HighscoreScreen/CountDown/CountDownTimer" to="GameManager" method="_on_count_down_timer_timeout"]
[connection signal="pressed" from="HighscoreScreen/StartScreen/MarginContainer2/VBoxContainer/Panel2/Button" to="GameManager" method="_on_button_pressed"]
[connection signal="pressed" from="HighscoreScreen/StartScreen/MarginContainer2/VBoxContainer/Panel2/Button" to="Entities/Player" method="_on_button_pressed"]
